KSCM-1763 - Added code for spacing issue in find course proposal. Addressed Erik's comments.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-lum/trunk@67061 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
+++ b/ks-cm-web/src/main/webapp/ks-cm-krad/css/cm.css
@@ -78,6 +78,10 @@
     padding-top: 10px;
 }
 
+.ks-cm-find-course-proposal .uif-boxLayoutHorizontalItem{
+    margin-right: 15px;
+}
+
 /* find course proposal end */
 
 
